<resources>
    <string name="app_name">Intent and Broadacst</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="send_data">Send Data</string>
    <string name="move_app">Move App</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="search_name">Search Username</string>
</resources>