<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_username"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="10dp"
        android:inputType="textPersonName"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="10dp"
        android:inputType="textPassword"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btn_send_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_data"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_move_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_app"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_send_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_broadcast"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_move_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>