<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/username"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:text="@string/password"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_search_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>